<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PG3200</string>
    <string name="intro">Intro</string>

    <string name="exercise2">Exercise 2</string>
    <string name="exercise3">Exercise 3</string>
    <string name="exercise4">Exercise 4</string>

    <string name="task1">Task 1</string>
    <string name="task2">Task 2</string>
    <string name="task3">Task 3</string>
    <string name="task4">Task 4</string>

    <string name="visible">Visible</string>
    <string name="invisible">Invisible</string>
    <string name="rotate_left">Rotate Left</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="increase_margin">Increase Margin</string>
    <string name="decrease_margin">Decrease Margin</string>
    <string name="unknown">Unknown</string>

    <string name="callNr">Call</string>
    <string name="showNr">Show</string>

    <string name="section1">Section 1</string>
    <string name="section2">Section 2</string>
    <string name="section3">Section 3</string>
    <string name="generate">Generate</string>
    <string name="ok">OK</string>
    <string name="generate_placeholder">Press the button to retrieve a word form the list</string>
    <string name="add">Add</string>
    <string name="write_word">Write a word</string>
    <string name="not_text_toast">"You have to write a value to add"</string>
</resources>
