<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="no.nith.pg3200.ovinger..Oving2">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="31dp"
        android:text="@string/intro"
        android:textSize="@dimen/headingSize"
        android:textAlignment="center" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:text="@string/exercise2"
        android:id="@+id/exercise2" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:text="@string/exercise3"
        android:id="@+id/exercise3" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:text="@string/exercise4"
        android:id="@+id/exercise4" />

</LinearLayout>

