<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.nith.pg3200.ovinger.oving2.task2.Task2">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:id="@+id/imgRooney"
        android:src="@drawable/rooney" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_toEndOf="@id/imgRooney"
        android:layout_below="@+id/imgRooney"
        android:layout_gravity="center">

        <Button
            android:layout_width="@dimen/image_manip_button_size"
            android:layout_height="wrap_content"
            android:text="@string/visible"
            android:id="@+id/btnVisible"
            android:layout_row="0"
            android:layout_column="0" />

        <Button
            android:layout_width="@dimen/image_manip_button_size"
            android:layout_height="wrap_content"
            android:text="@string/invisible"
            android:id="@+id/btnInvisible"
            android:layout_row="0"
            android:layout_column="1" />

        <Button
            android:layout_width="@dimen/image_manip_button_size"
            android:layout_height="wrap_content"
            android:text="@string/increase_margin"
            android:id="@+id/btnIncMargin"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            android:layout_width="@dimen/image_manip_button_size"
            android:layout_height="wrap_content"
            android:text="@string/decrease_margin"
            android:id="@+id/btnDecMargin"
            android:layout_row="1"
            android:layout_column="1" />

        <Button
            android:layout_width="@dimen/image_manip_button_size"
            android:layout_height="wrap_content"
            android:text="@string/rotate_left"
            android:id="@+id/btnRotateLeft"
            android:layout_row="2"
            android:layout_column="0" />

        <Button
            android:layout_width="@dimen/image_manip_button_size"
            android:layout_height="wrap_content"
            android:text="@string/rotate_right"
            android:id="@+id/btnRotateRigth"
            android:layout_row="2"
            android:layout_column="1" />

    </GridLayout>
</LinearLayout>
